# echo

./: .clangd  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
assets/corpus/: shrek_pt.txt
include/echo/: app.h  chunker.h  crypto.h  errors.h  image_carrier.h  manifest.h  provider.h  provider_localfs.h  stego.h  text_carrier.h  types.h  util.h
source/: stego.c
source/app/: download_file.c  upload_file.c  verify_file.c
source/cli/: main.c
source/core/: chunker.c  manifest.c  util.c
source/crypto/: crypto.c  crypto_stub.c
source/providers/: provider_localfs.c
source/stego/: corpus_loader.c  image_carrier.c  stego.c  text_carrier.c
tests/: CMakeLists.txt
tests/doubles/: fake_crypto.c  fake_crypto.h  fake_provider.c  fake_provider.h
tests/fixtures/: sample.txt
tests/integration/: test_localfs_provider.c  test_upload_download_roundtrip.c
tests/unit/: test_chunker.c  test_crypto.c  test_manifest.c  test_util.c
